# lome_project_template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_doc  proj_gen  sources.template.py
data/: test.json
doc/: AlgorithmLibrary.md  header.txt  root.mdl
hooks/: pre-commit
src/: Algorithms.cpp  Algorithms.hpp  CMakeLists.txt  Math.cpp  Math.hpp  Node.cpp  Node.hpp  main.cpp
src/algorithms/: Algorithms.cpp  Algorithms.hpp  DepthFirstSearch.cpp  DepthFirstSearch.hpp  GraphAlgorithms.cpp  GraphAlgorithms.hpp
src/math/: Math.cpp
src/tasks/: Result.hpp  TaskManager.cpp  TaskManager.hpp
src/test/: AlgorithmUnitTests.cpp  AlgorithmUnitTests.hpp  EdgeUnitTests.cpp  EdgeUnitTests.hpp  GraphAlgorithm.cpp  GraphAlgorithm.hpp  GraphAlgorithmUnitTests.cpp  GraphAlgorithmUnitTests.hpp  GraphUnitTests.cpp  GraphUnitTests.hpp  TaskManagerUnitTests.cpp  TaskManagerUnitTests.hpp  TestRunner.hpp  Utils.hpp
src/types/: Data.hpp  Edge.hpp  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  Vertex.cpp  Vertex.hpp
